==> snegovick/zephyr_modules_apm32/drivers/gpio/gpio_apm32.c <==
#define DT_DRV_COMPAT geehy_apm32_gpio
#include <zephyr/device.h>
#include <zephyr/drivers/clock_control/apm32_clock_control.h>
#include <zephyr/drivers/gpio.h>
#include <zephyr/drivers/gpio/gpio_utils.h>
#include <apm32f_hal.h>
#define APM32_PORTA 0
#define APM32_PORTB 1
#define APM32_PORTC 2
#define APM32_PORTD 3
#define APM32_PORTE 4
#define APM32_PORTF 5
#define APM32_PORTG 6
#define APM32_PORTH 7

static void gpio_apm32_isr(int line, void *arg)
{
    struct gpio_apm32_data *data = arg;

    gpio_fire_callbacks(&data->cb, data->dev, BIT(line));
}

static int gpio_apm32_flags_to_conf(gpio_flags_t flags, int *pincfg)
{

    if ((flags & GPIO_OUTPUT) != 0)
    {
        /* Output only or Output/Input */

        *pincfg = APM32_PINCFG_MODE_OUTPUT;

        if ((flags & GPIO_SINGLE_ENDED) != 0)
        {
            if (flags & GPIO_LINE_OPEN_DRAIN)
            {
                *pincfg |= APM32_PINCFG_OPEN_DRAIN;
            }
            else
            {
                /* Output can't be open source */
                return -ENOTSUP;
            }
        }
        else
        {
            *pincfg |= APM32_PINCFG_PUSH_PULL;
        }

        if ((flags & GPIO_PULL_UP) != 0)
        {
            *pincfg |= APM32_PINCFG_PULL_UP;
        }
        else if ((flags & GPIO_PULL_DOWN) != 0)
        {
            *pincfg |= APM32_PINCFG_PULL_DOWN;
        }
    }
    else if ((flags & GPIO_INPUT) != 0)
    {
        /* Input */

        *pincfg = APM32_PINCFG_MODE_INPUT;

        if ((flags & GPIO_PULL_UP) != 0)
        {
            *pincfg |= APM32_PINCFG_PULL_UP;
        }
        else if ((flags & GPIO_PULL_DOWN) != 0)
        {
            *pincfg |= APM32_PINCFG_PULL_DOWN;
        }
        else
        {
            *pincfg |= APM32_PINCFG_FLOATING;
        }
    }
    else
    {
        /* Deactivated: Analog */
        *pincfg = APM32_PINCFG_MODE_ANALOG;
    }

    return 0;
}

static inline uint32_t apm32_pinval_get(int pin)
{
    uint32_t pinval;

#ifdef CONFIG_SOC_SERIES_APM32F1X
    pinval = (1 << pin) << GPIO_PIN_MASK_POS;
    if (pin < 8)
    {
        pinval |= 1 << pin;
    }
    else
    {
        pinval |= (1 << (pin % 8)) | 0x04000000;
    }
#else
    pinval = 1 << pin;
#endif
    return pinval;
}

static inline uint32_t gpio_apm32_pin_to_exti_line(int pin)
{
#if defined(CONFIG_SOC_SERIES_APM32L0X) || defined(CONFIG_SOC_SERIES_APM32F0X)
    return ((pin % 4 * 4) << 16) | (pin / 4);
#elif defined(CONFIG_SOC_SERIES_APM32MP1X)
    return (((pin * 8) % 32) << 16) | (pin / 4);
#elif defined(CONFIG_SOC_SERIES_APM32G0X) || defined(CONFIG_SOC_SERIES_APM32L5X) || defined(CONFIG_SOC_SERIES_APM32U5X)
    return ((pin & 0x3) << (16 + 3)) | (pin >> 2);
#else
    return (0xF << ((pin % 4 * 4) + 16)) | (pin / 4);
#endif
}

static void gpio_apm32_set_exti_source(int port, int pin)
{
    uint32_t line = gpio_apm32_pin_to_exti_line(pin);

#if defined(CONFIG_SOC_SERIES_APM32L0X) && defined(LL_SYSCFG_EXTI_PORTH)
    /*
     * Ports F and G are not present on some APM32L0 parts, so
     * for these parts port H external interrupt should be enabled
     * by writing value 0x5 instead of 0x7.
     */
    if (port == APM32_PORTH)
    {
        port = LL_SYSCFG_EXTI_PORTH;
    }
#endif

#ifdef CONFIG_SOC_SERIES_APM32F1X
    LL_GPIO_AF_SetEXTISource(port, line);
#elif CONFIG_SOC_SERIES_APM32MP1X
    LL_EXTI_SetEXTISource(port, line);
#elif defined(CONFIG_SOC_SERIES_APM32G0X) || defined(CONFIG_SOC_SERIES_APM32L5X) || defined(CONFIG_SOC_SERIES_APM32U5X)
    LL_EXTI_SetEXTISource(port, line);
#else
    LL_SYSCFG_SetEXTISource(port, line);
#endif
}

static int gpio_apm32_get_exti_source(int pin)
{
    uint32_t line = gpio_apm32_pin_to_exti_line(pin);
    int port;

#ifdef CONFIG_SOC_SERIES_APM32F1X
    port = LL_GPIO_AF_GetEXTISource(line);
#elif CONFIG_SOC_SERIES_APM32MP1X
    port = LL_EXTI_GetEXTISource(line);
#elif defined(CONFIG_SOC_SERIES_APM32G0X) || defined(CONFIG_SOC_SERIES_APM32L5X) || defined(CONFIG_SOC_SERIES_APM32U5X)
    port = LL_EXTI_GetEXTISource(line);
#else
    port = LL_SYSCFG_GetEXTISource(line);
#endif

#if defined(CONFIG_SOC_SERIES_APM32L0X) && defined(LL_SYSCFG_EXTI_PORTH)
    /*
     * Ports F and G are not present on some APM32L0 parts, so
     * for these parts port H external interrupt is enabled
     * by writing value 0x5 instead of 0x7.
     */
    if (port == LL_SYSCFG_EXTI_PORTH)
    {
        port = APM32_PORTH;
    }
#endif

    return port;
}

static int gpio_apm32_enable_int(int port, int pin)
{
#if defined(CONFIG_SOC_SERIES_APM32F2X) || defined(CONFIG_SOC_SERIES_APM32F3X) ||                                      \
	defined(CONFIG_SOC_SERIES_APM32F4X) || defined(CONFIG_SOC_SERIES_APM32F7X) ||                                      \
	defined(CONFIG_SOC_SERIES_APM32H7X) || defined(CONFIG_SOC_SERIES_APM32L1X) ||                                      \
	defined(CONFIG_SOC_SERIES_APM32L4X) || defined(CONFIG_SOC_SERIES_APM32G4X)
    const struct device *const clk = DEVICE_DT_GET(APM32_CLOCK_CONTROL_NODE);
    struct apm32_pclken pclken = {
#ifdef CONFIG_SOC_SERIES_APM32H7X
        .bus = APM32_CLOCK_BUS_APB4,
        .enr = LL_APB4_GRP1_PERIPH_SYSCFG
#else
        .bus = APM32_CLOCK_BUS_APB2,
        .enr = LL_APB2_GRP1_PERIPH_SYSCFG
#endif /* CONFIG_SOC_SERIES_APM32H7X */
    };
    int ret;

    /* Enable SYSCFG clock */
    ret = clock_control_on(clk, (clock_control_subsys_t *)&pclken);
    if (ret != 0)
    {
        return ret;
    }
#endif

    gpio_apm32_set_exti_source(port, pin);

    return 0;
}

static int gpio_apm32_port_get_raw(const struct device *dev, uint32_t *value)
{
	const struct gpio_apm32_config *cfg = dev->config;
	GPIO_T *gpio = (GPIO_T *)cfg->base;

	*value = GPIO_ReadInputPort(gpio);

	return 0;
}

static int gpio_apm32_port_set_masked_raw(const struct device *dev, gpio_port_pins_t mask, gpio_port_value_t value)
{
	const struct gpio_apm32_config *cfg = dev->config;
	GPIO_T *gpio = (GPIO_T *)cfg->base;
	uint32_t port_value;

	port_value = GPIO_ReadOutputPort(gpio);
	GPIO_WriteOutputPort(gpio, (port_value & ~mask) | (mask & value));

	return 0;
}

static int gpio_apm32_port_set_bits_raw(const struct device *dev, gpio_port_pins_t pins)
{
	const struct gpio_apm32_config *cfg = dev->config;
	GPIO_T *gpio = (GPIO_T *)cfg->base;

#ifdef CONFIG_SOC_SERIES_APM32F1X
	WRITE_REG(gpio->BSC, pins);
#else
	WRITE_REG(gpio->BSCL, pins);
#endif /* #ifdef CONFIG_SOC_SERIES_APM32F1X */

	return 0;
}

static int gpio_apm32_port_clear_bits_raw(const struct device *dev, gpio_port_pins_t pins)
{
	const struct gpio_apm32_config *cfg = dev->config;
	GPIO_T *gpio = (GPIO_T *)cfg->base;

#ifdef CONFIG_SOC_SERIES_APM32F1X
	WRITE_REG(gpio->BC, pins);
#else
	WRITE_REG(gpio->BSCH, pins);
#endif

	return 0;
}

static int gpio_apm32_port_toggle_bits(const struct device *dev, gpio_port_pins_t pins)
{
	const struct gpio_apm32_config *cfg = dev->config;
	GPIO_T *gpio = (GPIO_T *)cfg->base;

	WRITE_REG(gpio->ODATA, READ_REG(gpio->ODATA) ^ pins);

	return 0;
}

int gpio_apm32_configure(const struct device *dev, int pin, int conf, int func)
{
    int ret;

    ret = pm_device_runtime_get(dev);
    if (ret < 0)
    {
        return ret;
    }

    gpio_apm32_configure_raw(dev, pin, conf, func);

    if (func == IS_GPIO_OUT)
    {
        uint32_t gpio_out = conf & (APM32_ODR_MASK << APM32_ODR_SHIFT);

        if (gpio_out == APM32_ODR_1)
        {
            gpio_apm32_port_set_bits_raw(dev, BIT(pin));
        }
        else if (gpio_out == APM32_ODR_0)
        {
            gpio_apm32_port_clear_bits_raw(dev, BIT(pin));
        }
    }

    return pm_device_runtime_put(dev);
}

static int gpio_apm32_pin_interrupt_configure(const struct device *dev, gpio_pin_t pin, enum gpio_int_mode mode,
											  enum gpio_int_trig trig)
{
	return -1;
#if 0
    const struct gpio_apm32_config *cfg = dev->config;
    struct gpio_apm32_data *data = dev->data;
    int edge = 0;
    int err = 0;

    if (mode == GPIO_INT_MODE_DISABLED)
    {
        if (gpio_apm32_get_exti_source(pin) == cfg->port)
        {
            apm32_exti_disable(pin);
            apm32_exti_unset_callback(pin);
            apm32_exti_trigger(pin, APM32_EXTI_TRIG_NONE);
        }
        /* else: No irq source configured for pin. Nothing to disable */
        goto exit;
    }

    /* Level trigger interrupts not supported */
    if (mode == GPIO_INT_MODE_LEVEL)
    {
        err = -ENOTSUP;
        goto exit;
    }

    if (apm32_exti_set_callback(pin, gpio_apm32_isr, data) != 0)
    {
        err = -EBUSY;
        goto exit;
    }

    gpio_apm32_enable_int(cfg->port, pin);

    switch (trig)
    {
    case GPIO_INT_TRIG_LOW:
        edge = APM32_EXTI_TRIG_FALLING;
        break;
    case GPIO_INT_TRIG_HIGH:
        edge = APM32_EXTI_TRIG_RISING;
        break;
    case GPIO_INT_TRIG_BOTH:
        edge = APM32_EXTI_TRIG_BOTH;
        break;
    }

    apm32_exti_trigger(pin, edge);

    apm32_exti_enable(pin);

exit:
    return err;
#endif
}

static int gpio_apm32_manage_callback(const struct device *dev, struct gpio_callback *callback, bool set)
{
	struct gpio_apm32_data *data = dev->data;

	return gpio_manage_callback(&data->cb, callback, set);
}

static int gpio_apm32_init(const struct device *dev)
{
	const struct device *rcm = DEVICE_DT_GET(DT_NODELABEL(rcm));
	const struct gpio_apm32_config *cfg = (const struct gpio_apm32_config *)dev->config;
	struct gpio_apm32_data *data = dev->data;
	int ret;

	data->dev = dev;

	if (!device_is_ready(rcm))
	{
		return -ENODEV;
	}

	ret = clock_control_on(rcm, (clock_control_subsys_t *)&cfg->clk_ctrl);

	return ret;
}
